--- a/views/dashboard/essay/answer.html
+++ b/views/dashboard/essay/answer.html
@@ -1,6 +1,6 @@
 <div id="essayans-wrapper">
 	<div class="header">
-		<div class="header-title cursor-default">essay answers</div>
+		<div class="header-title cursor-default">jawaban essai</div>
 		<div class="header-divider"></div>
 		<div class="header-input-container">
 			<div class="search-sign"><i class="fa fa-search" aria-hidden="true"></i></div>
@@ -23,17 +23,17 @@
 		<div id="essayans-content-wrapper" masonry preserve-order infinite-scroll='loadMoar()' infinite-scroll-disabled='pauseAjx || doneAjx' infinite-scroll-distance='1' infinite-scroll-container="'#essayans-content'">
 			<div class="essayans-card cursor-default masonry-brick" ng-repeat="o in data track by $index">
 				<div class="essayans-question-container">
-					<div class="dash-label">question</div>
-					<div class="dash-value essayans-question">{{ o.question }}</div>
+					<div class="dash-label">pertanyaan</div>
+					<div class="dash-value essayans-question">{{ o.question || '-' }}</div>
 				</div>
 				<div class="essayans-divider"></div>
 				<div class="essayans-answer-container">
-					<div class="dash-label">answer by <strong>{{ o.usr_display_name }}</strong></div>
+					<div class="dash-label">jawaban dari <strong>{{ o.usr_display_name }}</strong></div>
 					<div class="dash-value essayans-answer">{{ o.answer }}</div>
 				</div>
 				<div class="essayans-divider"></div>
 				<div class="essayans-timestamp">
-					submited: <span>{{ toDate(o.submitted_date) }}</span>
+					Dijawab pada: <span>{{ toDate(o.submitted_date) }}</span>
 				</div>
 				<i class="fa fa-times cursor-pointer" ng-click="delete(o.id, o.usr_display_name, $event)"><md-tooltip md-autohide="true">delete this answer</md-tooltip></i>
 			</div>
