--- a/views/dashboard/location.html
+++ b/views/dashboard/location.html
@@ -9,7 +9,7 @@
 		<div class="header-divider"></div>
 		<div class="header-another">
 			<div class="header-button">
-				<div class="button-like cursor-pointer" ng-click="newLocation()"><i class="fa fa-plus" aria-hidden="true"></i> New {{ state }}</div>
+				<div class="button-like cursor-pointer" ng-click="newLocation()"><i class="fa fa-plus" aria-hidden="true"></i> {{ locMap[state] }} Baru</div>
 			</div>
 		</div>
 	</div>
