--- a/views/dashboard/statistic.html
+++ b/views/dashboard/statistic.html
@@ -5,7 +5,7 @@
 				<div class="statistic-container">
 					<div id="widget-overview" class="statistic-card">
 						<div id="overview-container" class="cursor-default">
-							<div id="overview-title">gapura desa in numbers</div>
+							<div id="overview-title">gapura desa dalam angka</div>
 							<div ng-repeat="o in ::overview track by $index" class="row" ng-class="{ 'need-margin': !$last }">
 								<div class="col-{{ 12 / o.length }} overview-content" ng-repeat="d in ::o track by $index">
 									<!-- <div class="overview-value">{{ data.status[d.model] || 0 }}</div>
@@ -14,7 +14,7 @@
 								</div>
 							</div>
 						</div>
-						<div id="overview-disclaimer" class="cursor-default">* data retrieved at {{ currentTime }}</div>
+						<div id="overview-disclaimer" class="cursor-default">* data diambil pada {{ currentTime }}</div>
 					</div>
 				</div>
 			</div>
@@ -27,7 +27,7 @@
 							</div>
 							<div class="value-container float-right">
 								<div class="value-ceil align-right">{{ data.gender.m || 0 }}</div>
-								<div class="value-floor align-right">male user(s)</div>
+								<div class="value-floor align-right">pemain laki-laki</div>
 							</div>
 						</div>
 					</div>
@@ -40,7 +40,7 @@
 							</div>
 							<div class="value-container float-left">
 								<div class="value-ceil align-left">{{ data.gender.f || 0 }}</div>
-								<div class="value-floor align-left">female user(s)</div>
+								<div class="value-floor ">pemain perempuan</div>
 							</div>
 						</div>
 					</div>
@@ -51,7 +51,7 @@
 			<div class="col-6" force-height>
 				<div class="statistic-container">
 					<div id="widget-topscore" class="statistic-card">
-						<div class="sideview-title cursor-default">top scores</div>
+						<div class="sideview-title cursor-default">skor tertinggi</div>
 						<div class="sideview-content cursor-default">
 							<div class="sideview-podium-container">
 								<div class="sideview-podium">
@@ -88,7 +88,7 @@
 			<div class="col-6" force-height>
 				<div class="statistic-container">
 					<div id="widget-topcontributor" class="statistic-card">
-						<div class="sideview-title cursor-default">top contributors</div>
+						<div class="sideview-title cursor-default">kontribusi terbanyak</div>
 						<div class="sideview-content cursor-default">
 							<div class="sideview-podium-container">
 								<div class="sideview-podium">
@@ -99,15 +99,15 @@
 								<div class="sideview-achiever">
 									<div class="achiever-2">
 										<div class="achiever-ceil ellipsis">{{ data.topcontribution[1].usr_display_name || '-' }}</div>
-										<div class="achiever-floor">{{ data.topcontribution[1].usr_contribution || 0 }} contributions</div>
+										<div class="achiever-floor">{{ data.topcontribution[1].usr_contribution || 0 }} kontribusi</div>
 									</div>
 									<div class="achiever-1">
 										<div class="achiever-ceil ellipsis">{{ data.topcontribution[0].usr_display_name || '-' }}</div>
-										<div class="achiever-floor">{{ data.topcontribution[0].usr_contribution || 0 }} contributions</div>
+										<div class="achiever-floor">{{ data.topcontribution[0].usr_contribution || 0 }} kontribusi</div>
 									</div>
 									<div class="achiever-3">
 										<div class="achiever-ceil ellipsis">{{ data.topcontribution[2].usr_display_name || '-' }}</div>
-										<div class="achiever-floor">{{ data.topcontribution[2].usr_contribution || 0 }} contributions</div>
+										<div class="achiever-floor">{{ data.topcontribution[2].usr_contribution || 0 }} kontribusi</div>
 									</div>
 								</div>
 							</div>
@@ -115,7 +115,7 @@
 								<div class="sideview-rest" ng-repeat="o in data.topcontribution | startFrom : 3">
 									<div class="sideview-rest-number">{{ $index + 4 }}.</div>
 									<div class="sideview-rest-name">{{ o.usr_display_name }}</div>
-									<div class="sideview-rest-points">{{ o.usr_contribution }} conts</div>
+									<div class="sideview-rest-points">{{ o.usr_contribution }} kali</div>
 								</div>
 							</div>
 						</div>
@@ -125,7 +125,7 @@
 			<div class="col-6" force-height>
 				<div class="statistic-container">
 					<div id="widget-topvillage" class="statistic-card">
-						<div class="sideview-title cursor-default">highest participation villages</div>
+						<div class="sideview-title cursor-default">desa dengan partisipasi tertinggi</div>
 						<div class="sideview-content cursor-default">
 							<div class="sideview-village-container" ng-repeat="o in data.topvillage track by $index" set-village-width="{{ o.jumlah }}">
 								{{ o.name_desa }}
@@ -141,7 +141,7 @@
 			<div class="col-6" force-height>
 				<div class="statistic-container">
 					<div id="widget-notmyprovince" class="statistic-card">
-						<div class="sideview-title cursor-default">not yet joined provinces</div>
+						<div class="sideview-title cursor-default">provinsi yang belum bergabung</div>
 						<div class="sideview-content cursor-default">
 							<div class="sideview-notmyprovince" ng-repeat="o in data.notMyProvince | orderNotMyProvince">
 								{{ o }}
@@ -156,7 +156,7 @@
 		<div class="col-3" force-height>
 			<div class="statistic-container">
 				<div id="widget-institution" class="statistic-card">
-					<div class="sideview-title cursor-default">users' institution</div>
+					<div class="sideview-title cursor-default">lembaga pemain</div>
 					<div class="sideview-content cursor-default">
 						<nvd3 options="pieoptions" data="data.institution"></nvd3>
 					</div>
@@ -166,7 +166,7 @@
 		<div class="col-3" force-height>
 			<div class="statistic-container">
 				<div id="widget-education" class="statistic-card">
-					<div class="sideview-title cursor-default">users' education</div>
+					<div class="sideview-title cursor-default">pendidikan pemain</div>
 					<div class="sideview-content cursor-default">
 						<nvd3 options="pieoptions" data="data.education"></nvd3>
 					</div>
@@ -178,7 +178,7 @@
 				<div class="col-6 full-height">
 					<div class="statistic-container">
 						<div id="widget-hardestquestion" class="statistic-card">
-							<div class="sideview-title cursor-default">hardest question</div>
+							<div class="sideview-title cursor-default">pertanyaan tersulit</div>
 							<div class="sideview-content cursor-default">
 								{{ data.easiestquestion }}
 							</div>
@@ -188,7 +188,7 @@
 				<div class="col-6 full-height">
 					<div class="statistic-container">
 						<div id="widget-easiestquestion" class="statistic-card">
-							<div class="sideview-title cursor-default">easiest question</div>
+							<div class="sideview-title cursor-default">pertanyaan termudah</div>
 							<div class="sideview-content cursor-default">
 								{{ data.hardestquestion }}
 							</div>
@@ -200,7 +200,7 @@
 				<div class="col-4 full-height">
 					<div class="statistic-container">
 						<div id="widget-hardestcategory" class="statistic-card">
-							<div class="sideview-title cursor-default">hardest category</div>
+							<div class="sideview-title cursor-default">kategori tersulit</div>
 							<div class="sideview-content cursor-default">
 								{{ data.hardestcategory }}
 							</div>
@@ -210,9 +210,9 @@
 				<div class="col-4 full-height">
 					<div class="statistic-container">
 						<div id="widget-averagetime" class="statistic-card">
-							<div class="sideview-title cursor-default">answer average time</div>
+							<div class="sideview-title cursor-default">waktu menjawab</div>
 							<div class="sideview-content cursor-default">
-								<span>{{ data.averagetime || 0 }}</span> second
+								<span>{{ data.averagetime || 0 }}</span> detik
 							</div>
 						</div>
 					</div>
@@ -220,7 +220,7 @@
 				<div class="col-4 full-height">
 					<div class="statistic-container">
 						<div id="widget-easiestcategory" class="statistic-card">
-							<div class="sideview-title cursor-default">easiest category</div>
+							<div class="sideview-title cursor-default">kategori termudah</div>
 							<div class="sideview-content cursor-default">
 								{{ data.easiestcategory }}
 							</div>
@@ -234,7 +234,7 @@
 		<div class="col-3" force-height>
 			<div class="statistic-container">
 				<div id="widget-designation" class="statistic-card">
-					<div class="sideview-title cursor-default">users' designation</div>
+					<div class="sideview-title cursor-default">jabatan pemain</div>
 					<div class="sideview-content cursor-default">
 						<nvd3 options="pieoptions" data="data.designation"></nvd3>
 					</div>
@@ -244,7 +244,7 @@
 		<div class="col-6" force-height="{{ 1 / 2 }}">
 			<div class="statistic-container">
 				<div id="widget-age" class="statistic-card">
-					<div class="sideview-title cursor-default">users' age distribution</div>
+					<div class="sideview-title cursor-default">distribusi umur pemain</div>
 					<div class="sideview-content cursor-default">
 						<nvd3 options="baroptions" data="data.age"></nvd3>
 					</div>
