--- a/stylesheets/dashboard/_dashboard.scss
+++ b/stylesheets/dashboard/_dashboard.scss
@@ -1,4 +1,3 @@
-@import "category";
 @import "location";
 @import "misc";
 @import "statistic";
@@ -51,7 +50,7 @@
 		#sidebar-user {
 			#user-photo { display: inline-block; width: 80%; height: 80%; margin: 10%; border-radius: 50%; background-repeat: no-repeat; background-position: center center; background-size: cover; }
 			#dropdown-menu {
-				width: 140px; height: calc(90% - 10px); position: absolute; top: 5%; left: calc(#{$sidebar-width} + 5px); background: $sidebar-clr2; border-radius: 5px; padding: 5px; color: white;
+				width: 140px; height: calc(90% - 10px); position: absolute; top: 5%; left: calc(#{$sidebar-width} + 5px); background: $sidebar-clr2; border-radius: 5px; padding: 5px; color: white; z-index: 50;
 				&::after, &::before { @include box-sizing(border-box); }
 				&::after { position: absolute; left: -4px; top: 47%; display: inline-block; border-top: 4px solid transparent; border-right: 4px solid $sidebar-clr2; border-bottom: 4px solid transparent; content: ''; }
 				&::before { position: absolute; left: -5px; top: 47%; display: inline-block; border-top: 5px solid transparent; border-right: 5px solid #ccc; border-bottom: 5px solid transparent; border-right-color: rgba(0,0,0,0.2); content: ''; }
