--- a/views/dashboard/choices/answer.html
+++ b/views/dashboard/choices/answer.html
@@ -1,6 +1,6 @@
 <div id="choicesans-wrapper">
 	<div class="header">
-		<div class="header-title cursor-default">multiple choice answers</div>
+		<div class="header-title cursor-default">jawaban pilihan ganda</div>
 		<div class="header-divider"></div>
 		<div class="header-input-container">
 			<div class="search-sign"><i class="fa fa-search" aria-hidden="true"></i></div>
@@ -10,7 +10,7 @@
 		<div class="header-another">
 			<div class="header-sort">
 				<div class="header-sort-container cursor-pointer" open-dropdown="showDropdown">
-					<div class="header-sort-title"><span>category</span> :</div>
+					<div class="header-sort-title"><span>kategori</span> :</div>
 					<div class="header-sort-value"><span>{{ category.name }}</span> <i class="fa fa-caret-down" aria-hidden="true"></i></div>
 				</div>
 				<ul class="header-sort-dropdown" ng-show="showDropdown">
@@ -23,17 +23,17 @@
 		<div id="choicesans-content-wrapper" masonry preserve-order infinite-scroll='loadMoar()' infinite-scroll-disabled='pauseAjx || doneAjx' infinite-scroll-distance='1' infinite-scroll-container="'#choicesans-content'">
 			<div class="choicesans-card cursor-default masonry-brick" ng-repeat="o in data track by $index" ng-class="{ 'wrong-answer': o.correct_response !== o.status_answer }">
 				<div class="choicesans-question-container">
-					<div class="dash-label">question</div>
-					<div class="dash-value choicesans-question">{{ o.question_text }}</div>
+					<div class="dash-label">pertanyaan</div>
+					<div class="dash-value choicesans-question">{{ o.question_text || '-' }}</div>
 				</div>
 				<div class="choicesans-divider"></div>
 				<div class="choicesans-answer-container">
-					<div class="dash-label">answer by <strong>{{ o.usr_display_name }}</strong></div>
+					<div class="dash-label">jawaban dari <strong>{{ o.usr_display_name }}</strong></div>
 					<div class="dash-value choicesans-answer">{{ o['response_' + o.status_answer] }}</div>
 				</div>
 				<div class="choicesans-divider"></div>
 				<div class="choicesans-timestamp">
-					submited: <span>{{ toDate(o.answered_date) }}</span>
+					Dijawab pada: <span>{{ toDate(o.answered_date) }}</span>
 				</div>
 				<i class="fa fa-times cursor-pointer" ng-click="delete(o.ID, o.usr_display_name, $event)"><md-tooltip md-autohide="true">delete this answer</md-tooltip></i>
 			</div>
