--- a/views/dashboard/choices/question.html
+++ b/views/dashboard/choices/question.html
@@ -1,6 +1,6 @@
 <div id="choices-wrapper">
 	<div class="header">
-		<div class="header-title cursor-default">multiple choice list</div>
+		<div class="header-title cursor-default">pertanyaan pilihan ganda</div>
 		<div class="header-divider"></div>
 		<div class="header-input-container">
 			<div class="search-sign"><i class="fa fa-search" aria-hidden="true"></i></div>
@@ -10,7 +10,7 @@
 		<div class="header-another">
 			<div class="header-sort">
 				<div class="header-sort-container cursor-pointer" open-dropdown="showDropdown">
-					<div class="header-sort-title"><span>category</span> :</div>
+					<div class="header-sort-title"><span>kategori</span> :</div>
 					<div class="header-sort-value"><span>{{ category.name }}</span> <i class="fa fa-caret-down" aria-hidden="true"></i></div>
 				</div>
 				<ul class="header-sort-dropdown" ng-show="showDropdown">
@@ -18,7 +18,7 @@
 				</ul>
 			</div>
 			<div class="header-button">
-				<div class="button-like cursor-pointer" ng-click="newQuestion()"><i class="fa fa-plus" aria-hidden="true"></i> New Question</div>
+				<div class="button-like cursor-pointer" ng-click="newQuestion()"><i class="fa fa-plus" aria-hidden="true"></i> Pertanyaan Baru</div>
 			</div>
 		</div>
 	</div>
@@ -26,24 +26,24 @@
 		<div id="choices-content-wrapper" masonry preserve-order infinite-scroll='loadMoar()' infinite-scroll-disabled='pauseAjx || doneAjx' infinite-scroll-distance='1' infinite-scroll-container="'#choices-content'">
 			<div class="choices-card cursor-pointer masonry-brick" ng-repeat="o in data track by $index" ng-class="{ noenabled: !o.question_enabled }" ng-click="edit(o.ID_question)">
 				<div class="choices-question-container">
-					<div class="dash-label">question by <strong>{{ o.usr_display_name || '-' }}</strong></div>
+					<div class="dash-label">pertanyaan dari <strong>{{ o.usr_display_name || '-' }}</strong></div>
 					<div class="dash-value choices-question">{{ o.question_text }}</div>
 				</div>
 				<div class="choices-divider"></div>
 				<div class="choices-answer-container">
 					<div class="choices-anwer-row" ng-repeat="row in [0, 1] track by $index">
 						<div ng-repeat="ans in [1, 2] track by $index" class="choices-answer-wrapper" ng-class="">
-							<div class="dash-label">answer {{ (row * 2 + ans) }} <i ng-if="((row * 2 + ans) == o.correct_response)" class="fa fa-check" aria-hidden="true"></i></div>
+							<div class="dash-label">jawaban {{ (row * 2 + ans) }} <i ng-if="((row * 2 + ans) == o.correct_response)" class="fa fa-check" aria-hidden="true"></i></div>
 							<div class="dash-value choices-answer">{{ o['response_' + (row * 2 + ans)] }}</div>
 						</div>
 					</div>
 				</div>
 				<div class="choices-divider"></div>
 				<div class="choices-category">
-					category: <span class="color-{{ o.ID_category }}">{{ o.category_name }}</span>
+					kategori: <span class="color-{{ o.ID_category }}">{{ o.category_name }}</span>
 				</div>
-				<i class="fa fa-{{ o.question_enabled ? 'dot-circle-o' : 'circle' }}" ng-click="changeEna(o, $event)"><md-tooltip md-autohide="true">{{ o.question_enabled ? 'disable' : 'enable' }} this question</md-tooltip></i>
-				<i class="fa fa-times" ng-click="delete(o.ID_question, o.question_text, $event)"><md-tooltip md-autohide="true">delete this question</md-tooltip></i>
+				<i class="fa fa-{{ o.question_enabled ? 'dot-circle-o' : 'circle' }}" ng-click="changeEna(o, $event)"><md-tooltip md-autohide="true">{{ o.question_enabled ? 'non-aktifkan' : 'aktifkan' }} pertanyaan ini</md-tooltip></i>
+				<i class="fa fa-times" ng-click="delete(o.ID_question, o.question_text, $event)"><md-tooltip md-autohide="true">hapus pertanyaan ini</md-tooltip></i>
 			</div>
 		</div>
 		<div class="dash-load-more" class="cursor-default" ng-show="pauseAjx">{{ loading }}</div>
