--- a/views/dashboard/essay/question.html
+++ b/views/dashboard/essay/question.html
@@ -1,6 +1,6 @@
 <div id="essay-wrapper">
 	<div class="header">
-		<div class="header-title cursor-default">essay list</div>
+		<div class="header-title cursor-default">pertanyaan essai</div>
 		<div class="header-divider"></div>
 		<div class="header-input-container">
 			<div class="search-sign"><i class="fa fa-search" aria-hidden="true"></i></div>
@@ -10,7 +10,7 @@
 		<div class="header-another">
 			<div class="header-sort">
 				<div class="header-sort-container cursor-pointer" open-dropdown="showDropdown">
-					<div class="header-sort-title"><span>category</span> :</div>
+					<div class="header-sort-title"><span>kategori</span> :</div>
 					<div class="header-sort-value"><span>{{ category.name }}</span> <i class="fa fa-caret-down" aria-hidden="true"></i></div>
 				</div>
 				<ul class="header-sort-dropdown" ng-show="showDropdown">
@@ -18,7 +18,7 @@
 				</ul>
 			</div>
 			<div class="header-button">
-				<div class="button-like cursor-pointer" ng-click="newQuestion()"><i class="fa fa-plus" aria-hidden="true"></i> New Question</div>
+				<div class="button-like cursor-pointer" ng-click="newQuestion()"><i class="fa fa-plus" aria-hidden="true"></i> Pertanyaan Baru</div>
 			</div>
 		</div>
 	</div>
@@ -26,14 +26,14 @@
 		<div id="essay-content-wrapper" masonry preserve-order infinite-scroll='loadMoar()' infinite-scroll-disabled='pauseAjx || doneAjx' infinite-scroll-distance='1' infinite-scroll-container="'#essay-content'">
 			<div class="essay-card cursor-pointer masonry-brick" ng-repeat="o in data track by $index" ng-class="" ng-click="edit(o.id)">
 				<div class="essay-question-container">
-					<div class="dash-label">question</div>
+					<div class="dash-label">pertanyaan</div>
 					<div class="dash-value essay-question">{{ o.question }}</div>
 				</div>
 				<div class="essay-divider"></div>
 				<div class="essay-category">
-					category: <span class="color-{{ o.ID_category }}">{{ o.category_name }}</span>
+					kategori: <span class="color-{{ o.ID_category }}">{{ o.category_name }}</span>
 				</div>
-				<i class="fa fa-times" ng-click="delete(o.id, o.question, $event)"><md-tooltip md-autohide="true">delete this question</md-tooltip></i>
+				<i class="fa fa-times" ng-click="delete(o.id, o.question, $event)"><md-tooltip md-autohide="true">hapus pertanyaan ini</md-tooltip></i>
 			</div>
 		</div>
 		<div class="dash-load-more" class="cursor-default" ng-show="pauseAjx">{{ loading }}</div>
