--- a/views/dialogs/essay.html
+++ b/views/dialogs/essay.html
@@ -1,6 +1,6 @@
 <form id="essaymodal-wrapper" ng-submit="closeThisDialog(data)">
 	<div id="essaymodal-header" class="modal-header cursor-default">
-		{{ data.id ? 'edit' : 'new' }} question
+		{{ data.id ? 'ubah' : 'buat' }} pertanyaan
 	</div>
 	<div id="essaymodal-content">
 		<div ng-repeat="o in ::inputs track by $index" id="essayinput-{{ o.model }}">
@@ -20,7 +20,7 @@
 		</div>
 	</div>
 	<div id="essaymodal-buttons">
-		<button type="submit" id="confirm-button" class="cursor-pointer"><i class="fa fa-check" aria-hidden="true"></i> {{ data.id ? 'edit' : 'add' }} question</button>
-		<button type="button" id="cancel-button" class="cursor-pointer" ng-click="closeThisDialog()"><i class="fa fa-times" aria-hidden="true"></i> cancel</button>
+		<button type="submit" id="confirm-button" class="cursor-pointer"><i class="fa fa-check" aria-hidden="true"></i> {{ data.id ? 'ubah' : 'buat' }} pertanyaan</button>
+		<button type="button" id="cancel-button" class="cursor-pointer" ng-click="closeThisDialog()"><i class="fa fa-times" aria-hidden="true"></i> batal</button>
 	</div>
 </form>
