--- a/views/dashboard/misc.html
+++ b/views/dashboard/misc.html
@@ -1,6 +1,9 @@
 <div id="misc-wrapper">
 	<div class="header">
-		<div class="header-title cursor-default">pengaturan</div>
+		<div class="header-title cursor-default">
+			pengaturan
+			<i class="fa fa-question-circle-o cursor-pointer" aria-hidden="true" ng-click="openHint()"><md-tooltip md-autohide="true">petunjuk penggunaan halaman</md-tooltip></i>
+		</div>
 	</div>
 	<div id="misc-content-container" class="dash-content">
 		<div id="misc-content-wrapper">
