--- a/views/dashboard/choices/question.html
+++ b/views/dashboard/choices/question.html
@@ -1,6 +1,9 @@
 <div id="choices-wrapper">
 	<div class="header">
-		<div class="header-title cursor-default">pertanyaan pilihan ganda</div>
+		<div class="header-title cursor-default">
+			pertanyaan pilihan ganda
+			<i class="fa fa-question-circle-o cursor-pointer" aria-hidden="true" ng-click="openHint()"><md-tooltip md-autohide="true">petunjuk penggunaan halaman</md-tooltip></i>
+		</div>
 		<div class="header-divider"></div>
 		<div class="header-input-container">
 			<div class="search-sign"><i class="fa fa-search" aria-hidden="true"></i></div>
