--- a/views/dashboard/location.html
+++ b/views/dashboard/location.html
@@ -1,7 +1,7 @@
 <div id="location-wrapper">
 	<div class="header">
 		<div class="header-title" ng-class="state == 'province' ? 'cursor-default' : 'cursor-pointer'" ng-bind-html="title" ng-click="backLocation()"></div>
-		<div class="header-divider"></div>
+		<div class="header-divider"><i class="fa fa-question-circle-o cursor-pointer" aria-hidden="true" ng-click="openHint()"><md-tooltip md-autohide="true">petunjuk penggunaan halaman</md-tooltip></i></div>
 		<div class="header-input-container">
 			<div class="search-sign"><i class="fa fa-search" aria-hidden="true"></i></div>
 			<input type="text" placeholder="type to search location by name (min. 3 characters)" ng-model="search" type-everywhere>
