--- a/views/dialogs/notif.html
+++ b/views/dialogs/notif.html
@@ -1,7 +1,5 @@
 <form id="notification-wrapper" ng-submit="closeThisDialog()">
-	<div id="notification-content" class="modal-content">
-		{{ ngDialogData.content }}
-	</div>
+	<div id="notification-content" class="modal-content" ng-bind-html="trust(ngDialogData.content)"></div>
 	<div id="notification-buttons">
 		<button type="submit" id="confirm-button" class="cursor-pointer"><i class="fa fa-check" aria-hidden="true"></i> OK</button>
 	</div>
