--- a/stylesheets/dashboard/_dashboard.scss
+++ b/stylesheets/dashboard/_dashboard.scss
@@ -1,3 +1,4 @@
+@import "admin";
 @import "location";
 @import "misc";
 @import "statistic";
@@ -13,7 +14,7 @@
 		width: $sidebar-width; height: 100%; background: $sidebar-clr; @include box-shadow(4px 0px $sidebar-shadow); display: inline-block;
 		#sidebar-logo, #sidebar-user { width: calc(#{$sidebar-width} - 15px); height: calc(#{$sidebar-width} - 15px); padding: 7.5px; position: relative; }
 		#sidebar-menu {
-			width: 100%; height: calc(100% - (#{$sidebar-width} * 2)); background: $sidebar-clr2;
+			width: 100%; height: calc(100% - (#{$sidebar-width} * (5 / 3))); background: $sidebar-clr2;
 			#sidebar-menu-wrapper {
 				width: 100%; padding: 15px 0px; color: $menu-clr; @include clearfix();
 				.sidebar-menu-container {
@@ -48,6 +49,7 @@
 			}
 		}
 		#sidebar-user {
+			height: calc(#{$sidebar-width} * (2 / 3) - 15px);
 			#user-photo { display: inline-block; width: 80%; height: 80%; margin: 10%; border-radius: 50%; background-repeat: no-repeat; background-position: center center; background-size: cover; }
 			#dropdown-menu {
 				width: 140px; height: calc(90% - 10px); position: absolute; top: 5%; left: calc(#{$sidebar-width} + 5px); background: $sidebar-clr2; border-radius: 5px; padding: 5px; color: white; z-index: 50;
@@ -59,6 +61,10 @@
 					margin-top: 5px; font-family: $menutitle-font;
 					li { padding: 5px 7.5px; &:hover { background: rgba(white, 0.1); } }
 				}
+			}
+			#logout-button {
+				width: 100%; height: 80%; color: white; text-align: center; padding: 10% 0px;
+				i { font-size: 20px; margin: 5%; }
 			}
 		}
 	}
