--- a/stylesheets/dialogs/_dialogs.scss
+++ b/stylesheets/dialogs/_dialogs.scss
@@ -1,3 +1,4 @@
+@import "admin";
 @import "badge";
 @import "category";
 @import "choices";
@@ -6,6 +7,7 @@
 @import "location";
 @import "lone";
 @import "notif";
+@import "profile";
 @import "essay";
 @import "user";
 
