--- a/views/dialogs/admin.html
+++ b/views/dialogs/admin.html
@@ -16,7 +16,7 @@
 		</div>
 	</div>
 	<div id="adminmodal-buttons">
-		<button type="submit" id="confirm-button" class="cursor-pointer"><i class="fa fa-check" aria-hidden="true"></i> {{ data.id ? 'ubah' : 'buat' }} pemain</button>
+		<button type="submit" id="confirm-button" class="cursor-pointer"><i class="fa fa-check" aria-hidden="true"></i> {{ data.id ? 'ubah' : 'buat' }} administrator</button>
 		<button type="button" id="cancel-button" class="cursor-pointer" ng-click="closeThisDialog()"><i class="fa fa-times" aria-hidden="true"></i> batal</button>
 	</div>
 </form>
