--- a/views/dashboard/user.html
+++ b/views/dashboard/user.html
@@ -51,7 +51,7 @@
 				</div>
 				<div class="user-age">
 					<div class="dash-label">umur</div>
-					<div class="dash-value ellipsis">{{ o.usr_years || '-' }} tahun</div>
+					<div class="dash-value ellipsis">{{ toYear(o.usr_year_born) || '-' }} tahun</div>
 				</div>
 				<div class="user-score">
 					<div class="dash-label">skor</div>
