--- a/views/auth/auth.html
+++ b/views/auth/auth.html
@@ -11,7 +11,7 @@
 				</md-input-container>
 				<md-input-container>
 					<label>password</label>
-					<input type="password" ng-model="password" autofocus required/>
+					<input type="password" ng-model="password" required/>
 				</md-input-container>
 
 				<button type="submit" class="hidden">Login</button>
